# backend/app/Http/Resources/UserResource.php
@@ -13,8 +13,10 @@ class UserResource extends JsonResource
             'id' => $this->id,
             'first_name' => $this->first_name,
             'last_name' => $this->last_name,
+            'other_names' => $this->other_names,
             'email' => $this->email,
             'phone' => $this->phone,
+            'address' => $this->address,
             'role' => $this->role,
             'status' => $this->status,
             'created_at' => $this->created_at,
